--- a/index.html
+++ b/index.html
@@ -154,5 +154,169 @@
 
 
 
+
+
+
+
+    <!-- ADDITIONAL OFFERS -->
+
+
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Jeep</h3>
+        <h2 class="modelTrim">Grand Cherokee Laredo 4WD</h2>
+        <img src="vehicleImages/CHH1656.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $189</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            24 MOS
+          </h3>
+        </div>
+        <h4 class="moneyDue">$3,483 DUE AT SIGNING</h4>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Jeep/2017-Jeep-Grand+Cherokee-b3ae184e0a0e0ae9504e6d7a58d58634.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs, MP3, ParkView back up camera/park sensors, Uconnect, rear step bumper, wood trim, spoiler, kyls entry, tract cntrl., MSRP: $35,790. VIN #HC847549. Stk #CHH1656. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $4536/$22,897.70 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $250 NE 2017 bonus cash, $1500 NE 2017 lease cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 36 mos. $27.78 per mo. per $1,000 financed on select new models, see dealer for details. Not resp. for typos. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+        </p>
+      </div>
+    </div>
+
+
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Dodge</h3>
+        <h2 class="modelTrim">Charger SXT AWD</h2>
+        <img src="vehicleImages/CHH2223.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $199</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            36 MOS
+          </h3>
+        </div>
+        <h4 class="moneyDue">$4,188 DUE AT SIGNING</h4>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Dodge/2017-Dodge-Charger-fd52d4520a0e0ae83b231590fa202566.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs/drvr seat, MP3/NAV/DVD, Uconnect, Bluetooth®, ParkView back up camera, htd front seats, alloys, kyls entry, tract cntrl., MSRP: $34,875. VIN #HH603290. Stk #CHH2223. Lease: $2995 down pymt. + 1st mo. pymt. + $695 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $7164/$19,880 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $3000 NE 2017 IDL bonus cash, $750 NE lease cash, $1000 NE 2017 bonus cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 60 mos. $16.67 per mo. per $1,000 financed on select new models, see dealer for details. *^*must finance thru Chrysler Capital to qualified buyers. Lessee must qualify thru primary lender with tier 1 credit. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+
+        </p>
+      </div>
+    </div>
+
+
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Dodge</h3>
+        <h2 class="modelTrim">Durango SXT AWD</h2>
+        <img src="vehicleImages/CHH2281.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $225</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            36 MOS
+          </h3>
+        </div>
+        <h4 class="moneyDue">$3,519 DUE AT SIGNING</h4>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Dodge/2017-Dodge-Durango-54ca21730a0e0adf4dcd53fbd832a269.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR 7 psngr, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs/drvr seat, htd front seats, MP3, Uconnect, Bluetooth®, ParkView back up camera, 3rd row seat, roof rails, kyls entry, tract cntrl., MSRP: $37,975. VIN #HC758034. Stk #CHH2281. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $8100/$20,476.75 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $750 NE 2017 bonus cash, $1750 NE lease cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 36 mos. $27.78 per mo. per $1,000 financed on select new models, see dealer for details. *^*must finance thru Chrysler Capital to qualified buyers. Lessee must qualify thru primary lender with tier 1 credit. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+
+
+        </p>
+      </div>
+    </div>
+
+
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Chrysler</h3>
+        <h2 class="modelTrim">Pacifica Touring</h2>
+        <img src="vehicleImages/CHH0814.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $239</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            24 MOS
+          </h3>
+        </div>
+        <h4 class="moneyDue">$3,533 DUE AT SIGNING</h4>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Chrysler/2017-Chrysler-Pacifica-7d249e4f0a0e0ae75af8e084d97146ab.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR 7 psngr, V6, 9 speed AUTOMATIC, a/c, p/sABS/winds/lks/mirrs/drvr seat, MP3, Bluetooth®, Uconnect, ParkView back up camera, kyls entry, ttract cntrl., MSRP: $32,755. VIN #HR635797. Stk #CHH0814. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $5736/$18,670.35 purch opt. at lease end. Mi. allow: 10K mi./yr. 20¢ mi. thereafter. Lease price includes: $1250 NE lease cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 60 mos. $16.67 per mo. per $1,000 financed on select new models, see dealer for details. *^*must finance thru Chrysler Capital to qualified buyers. Lessee must qualify thru primary lender with tier 1 credit. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+
+        </p>
+      </div>
+    </div>
+
+
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Ram</h3>
+        <h2 class="modelTrim">1500 Big Horn/LoneStar Crew Cab 4x4</h2>
+        <img src="vehicleImages/CHH0160.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $269</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            24 MOS
+          </h3>
+        </div>
+        <h4 class="moneyDue">$3,533 DUE AT SIGNING</h4>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Ram/2017-Ram-1500-9e9a17ce0a0e0a177eab23189bad46c2.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR, V8 HEMI, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs, USB/NAV, Bluetooth®, Uconnect, spray in bedliner, ParkView back up camera, rear step bumper, protection group, heated front seats, heated steer wheel, remote start, spray in bedliner, tow hooks, keyless entry, tract cntrl., MSRP: $50,155. VIN #HS504211. Stk #CHH0160. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $6456/$28,938.35 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $4750 NE lease cash, $750 NE 2017 bonus cash, $500 NE Chrysler 2017 bonus cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. *^*must finance thru Chrysler Capital to qualified buyers. Not resp. for typos. 0% APR for up to 36 mos. $27.78 per mo. per $1,000 financed on select new models, see dealer for details. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+
+
+        </p>
+      </div>
+    </div>
+
+
+
   </body>
 </html>
