--- a/index.html
+++ b/index.html
@@ -160,6 +160,35 @@
 
     <!-- ADDITIONAL OFFERS -->
 
+    <div class="specialContainer">
+      <div class="specialContent leftContent">
+        <h3 class="yearMake">New 2017 Jeep</h3>
+        <h2 class="modelTrim">Cherokee Latitude AWD</h2>
+        <img src="vehicleImages/CHH1105.png" alt="chrysler vehicle image" class="vehicleImage">
+      </div>
+      <div class="specialContent rightContent">
+      <h3 class="leaseHead">Lease this vehicle for:</h3>
+        <div class="leaseQuoteSection">
+
+          <h1 class="lease"> $189</h1>
+          <h3 class="monthsSections">/MO
+            <br>
+            24 MOS
+          </h3>
+        </div>
+
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Jeep/2017-Jeep-Grand+Cherokee-b3ae184e0a0e0ae9504e6d7a58d58634.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+
+        <p class="disclaimer">
+          4 DR, 4 cylinder, 9 speed AUTOMATIC w/OD, a/c, p/s/ABS/winds/lks/mirrs, MP3, Bluetooth®, back up camera, simulated wood trim, roof rails, spoiler, alloys, kyls entry, tract cntrl., MSRP: $30,385. VIN #HW579690. Stk #CHH1105. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $4536/$16,407.90 purch opt. at lease end. Mi. allow: 10K mi./yr. 20¢ mi. thereafter. Lease price includes: $2500 NE lease cash, $1000 Cherokee lease bonus cash &amp; ^^$500 military cash, if qual.
+Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 60 mos. $16.67 per mo. per $1,000 financed on select new models, see dealer for details. *^*must finance thru Chrysler Capital to qualified buyers. Lessee must qualify thru primary lender with tier 1 credit. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
+
+
+
+        </p>
+      </div>
+    </div>
+
 
     <div class="specialContainer">
       <div class="specialContent leftContent">
