Updated Ram photo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="specialContainer">
       <div class="specialContent leftContent">
         <h3 class="yearMake">New 2017 Jeep</h3>
-        <h2 class="modelTrim">Renegade Latitude 4WD</h2>
+        <h2 class="modelTrim">Patriot Latitude 4WD</h2>
         <img src="vehicleImages/CHH0317.png" alt="chrysler vehicle image" class="vehicleImage">
       </div>
       <div class="specialContent rightContent">
@@ -176,8 +176,9 @@
             24 MOS
           </h3>
         </div>
+        <h4 class="moneyDue">$3,483 DUE AT SIGNING</h4>
 
-        <a href="http://www.ramseychryslerjeepdodge.com/new/Jeep/2017-Jeep-Grand+Cherokee-b3ae184e0a0e0ae9504e6d7a58d58634.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+        <a href="mailto:jrankin@ramseychryslerjeep.com?subject=I%20am%20interested%20in%20CHH1105" class="linkButton" target="_blank">VIEW VEHICLE</a>
 
         <p class="disclaimer">
           4 DR, 4 cylinder, 9 speed AUTOMATIC w/OD, a/c, p/s/ABS/winds/lks/mirrs, MP3, Bluetooth®, back up camera, simulated wood trim, roof rails, spoiler, alloys, kyls entry, tract cntrl., MSRP: $30,385. VIN #HW579690. Stk #CHH1105. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $4536/$16,407.90 purch opt. at lease end. Mi. allow: 10K mi./yr. 20¢ mi. thereafter. Lease price includes: $2500 NE lease cash, $1000 Cherokee lease bonus cash &amp; ^^$500 military cash, if qual.
