--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Prices incl. all costs to be paid by consumer except for licensing, registration
       <div class="specialContent leftContent">
         <h3 class="yearMake">New 2017 Jeep</h3>
         <h2 class="modelTrim">Grand Cherokee Laredo 4WD</h2>
-        <img src="vehicleImages/CHH1656.png" alt="chrysler vehicle image" class="vehicleImage">
+        <img src="vehicleImages/CHH1711.png" alt="chrysler vehicle image" class="vehicleImage">
       </div>
       <div class="specialContent rightContent">
       <h3 class="leaseHead">Lease this vehicle for:</h3>
@@ -209,10 +209,10 @@ Prices incl. all costs to be paid by consumer except for licensing, registration
         </div>
         <h4 class="moneyDue">$3,483 DUE AT SIGNING</h4>
 
-        <a href="http://www.ramseychryslerjeepdodge.com/new/Jeep/2017-Jeep-Grand+Cherokee-b3ae184e0a0e0ae9504e6d7a58d58634.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Jeep/2017-Jeep-Grand+Cherokee-c83957260a0e0ae70fea12d24635e146.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
 
         <p class="disclaimer">
-          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs, MP3, ParkView back up camera/park sensors, Uconnect, rear step bumper, wood trim, spoiler, kyls entry, tract cntrl., MSRP: $35,790. VIN #HC847549. Stk #CHH1656. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $4536/$22,897.70 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $250 NE 2017 bonus cash, $1500 NE 2017 lease cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs, MP3, ParkView back up camera/park sensors, Uconnect, rear step bumper, wood trim, spoiler, kyls entry, tract cntrl., MSRP: $35,790. VIN #1C4RJFAG5HC834519. Stk #CHH1711. Lease: $2995 down pymt. + 1st mo. pymt. + $0 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $4536/$22,897.70 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $250 NE 2017 bonus cash, $1500 NE 2017 lease cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
 Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 36 mos. $27.78 per mo. per $1,000 financed on select new models, see dealer for details. Not resp. for typos. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
 
 
@@ -225,7 +225,7 @@ Prices incl. all costs to be paid by consumer except for licensing, registration
       <div class="specialContent leftContent">
         <h3 class="yearMake">New 2017 Dodge</h3>
         <h2 class="modelTrim">Charger SXT AWD</h2>
-        <img src="vehicleImages/CHH2223.png" alt="chrysler vehicle image" class="vehicleImage">
+        <img src="vehicleImages/CHH2304.png" alt="chrysler vehicle image" class="vehicleImage">
       </div>
       <div class="specialContent rightContent">
       <h3 class="leaseHead">Lease this vehicle for:</h3>
@@ -239,10 +239,10 @@ Prices incl. all costs to be paid by consumer except for licensing, registration
         </div>
         <h4 class="moneyDue">$4,188 DUE AT SIGNING</h4>
 
-        <a href="http://www.ramseychryslerjeepdodge.com/new/Dodge/2017-Dodge-Charger-fd52d4520a0e0ae83b231590fa202566.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
+        <a href="http://www.ramseychryslerjeepdodge.com/new/Dodge/2017-Dodge-Charger-78c6dca60a0e0a6b3b5b9d254ce083a8.htm" class="linkButton" target="_blank">VIEW VEHICLE</a>
 
         <p class="disclaimer">
-          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs/drvr seat, MP3/NAV/DVD, Uconnect, Bluetooth®, ParkView back up camera, htd front seats, alloys, kyls entry, tract cntrl., MSRP: $34,875. VIN #HH603290. Stk #CHH2223. Lease: $2995 down pymt. + 1st mo. pymt. + $695 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $7164/$19,880 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $3000 NE 2017 IDL bonus cash, $750 NE lease cash, $1000 NE 2017 bonus cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
+          4 DR, V6, 8 speed AUTOMATIC, a/c, p/s/ABS/winds/lks/htd mirrs/drvr seat, MP3/NAV/DVD, Uconnect, Bluetooth®, ParkView back up camera, htd front seats, alloys, kyls entry, tract cntrl., MSRP: $34,875. VIN #2C3CDXJG9HH505553. Stk #CHH2304. Lease: $2995 down pymt. + 1st mo. pymt. + $695 bank fee + $0 sec dep. + $299 doc fee = due at signing. Ttl. pymts: $7164/$19,880 purch opt. at lease end. Mi. allow: 10K mi./yr. 25¢ mi. thereafter. Lease price includes: $3000 NE 2017 IDL bonus cash, $750 NE lease cash, $1000 NE 2017 bonus cash, ^^$500 military cash &amp; ^*†$1000 conquest lease rebate, if qual.
 Prices incl. all costs to be paid by consumer except for licensing, registration and taxes. *Based on closed end lease w/primary lender approval. Lessee resp. for excess wear, tear &amp; mileage. Customers must meet all rebate qualifications. ^*†NON-Chrysler/Jeep/Dodge/Ram vehicles restrictions apply - see dealer for complete details, if qual. ^^(military) must be active or retired member of any US Military branch. 0% APR for up to 60 mos. $16.67 per mo. per $1,000 financed on select new models, see dealer for details. *^*must finance thru Chrysler Capital to qualified buyers. Lessee must qualify thru primary lender with tier 1 credit. Photos may not accurately represent vehicles. Vehicle prices/leases &amp; incentives expire 7/5/17 and subj. to change by manufacturer. Chrysler, Jeep, Dodge, Ram are registered trademarks of Chrysler Group, LLC.
 
 
