--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="js/jquery-3.1.0.min.js" charset="utf-8"></script>
     <script src="js/master.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/master.css">
+    <!--[if IE]>
+	<link rel="stylesheet" type="text/css" href="ie-only.css" />
+<![endif]-->
   </head>
   <body>
 
